k8s/namespaces/games/minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: games
  labels:
    app.kubernetes.io/name: minecraft
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: minecraft
      app.kubernetes.io/managed-by: flux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minecraft
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: minecraft
        # renovate: datasource=docker depName=docker.io/itzg/minecraft-server
          image: docker.io/itzg/minecraft-server:2025.9.2-java21-graalvm@sha256:e84a8d8844222c9cc33526f9311a3e219c77672c749e59b3321195ec73788289
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 25565
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: minecraft-config
